--- a/html/mycakeapp/webroot/css/users.css
+++ b/html/mycakeapp/webroot/css/users.css
@@ -51,14 +51,6 @@ select {
     margin: 0 auto;
 }
 
-.birthday {
-    display: block;
-    text-align: left;
-    width: 336px;
-    margin: 0 auto 5px;
-    color: #707070;
-}
-
 .date {
     text-align: left;
 }
@@ -127,4 +119,12 @@ select {
     box-shadow: 0px 3px 6px #00000036;
     border: 3px solid #F5AE0B;
     opacity: 1;
+}
+
+label {
+    display: block;
+    text-align: left;
+    width: 336px;
+    margin: 0 auto 5px;
+    color: #707070;
 }
