--- a/html/mycakeapp/webroot/css/moviesinfo.css
+++ b/html/mycakeapp/webroot/css/moviesinfo.css
@@ -1,13 +1,19 @@
 .movie-info-wrap{
     width: 65%;
     margin: 0 auto;
-    margin-bottom: 100px;
+    margin-top: 50px;
+}
+
+.scheduel-text{
+    font-weight: bold;
+    margin-bottom: 20px;
 }
 
 .movie-info-menu ul{
     display: flex;
     margin: 0 auto;
     width: 100%;
+    margin-bottom: 30px;
 }
 
 .movie-info-menu li{
@@ -32,4 +38,67 @@
 
 .info-menu-active{
     background-color: #EFA600;
+}
+
+/* =============== 以下、映画別予約購入部分 =============== */
+
+.scheduled-date{
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.movie-list{
+    background-color:#D5D5D5;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+}
+
+.movie-list-head{
+    display: flex;
+    align-items: baseline;
+    color: #EBEBEB;
+    background-color: #7B7B7B;
+    padding: 14px 0;
+    margin-bottom: 15px;
+}
+
+.movie-title{
+    margin-left: 16px;
+}
+
+.movie-title,.movie-screening-time{
+    margin-right: 16px;
+}
+
+.movie-scheduled-to-end{
+    font-size: 14px;
+    color: #D1D1D1;
+}
+
+.movie-list-main{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #D5D5D5;
+}
+
+.movie-img{
+    height:100px;
+    width: 90px;
+    background-color: #ffffff;
+}
+
+.movie-schedule-for-the-day{
+    background-color: #ffffff;
+    padding: 20px 20px 10px;
+}
+
+.movie-time{
+    margin-bottom: 20px;
+}
+
+.buy-button{
+    padding: 10px 20px;
+    background-color: #D5D5D5;
 }
