--- a/html/mycakeapp/webroot/css/moviesinfo.css
+++ b/html/mycakeapp/webroot/css/moviesinfo.css
@@ -42,7 +42,7 @@
 
 /* =============== 以下、映画別予約購入部分 =============== */
 
-.scheduled-date{
+#scheduled-date{
     font-size: 20px;
     font-weight: bold;
     margin-bottom: 20px;
