--- a/html/mycakeapp/webroot/css/bookings.css
+++ b/html/mycakeapp/webroot/css/bookings.css
@@ -105,7 +105,7 @@ input[type="radio"]:checked + label {
     background: #ffb100;
 }
 
-label {
+input[type="radio"] + label {
     display: inline-block;
     width: 24px;
     height: 24px;
