--- a/html/mycakeapp/webroot/css/movies.css
+++ b/html/mycakeapp/webroot/css/movies.css
@@ -6,12 +6,11 @@
 * 2 content詳細(font-sizeなど。大体は「文字」「色」「背景」の順番)
 */
 
-
-html, body {
+html,
+body {
     width: 100%;
-    background-color: #EBEBEB;
+    background-color: #ebebeb;
 }
-
 
 bodyの子要素の子要素 {
     width: 100%;
@@ -35,36 +34,36 @@ input {
 input ボタン {
     width: 336px;
     height: 48px;
-    border: 3px #F5AE0B;
+    border: 3px #f5ae0b;
     font-family: Noto Sans;
     font-weight: bold;
     letter-spacing: 0.44px;
-    color: #FFFFFF;
-    background: #F5AE0B 0% 0% no-repeat padding-box;
+    color: #ffffff;
+    background: #f5ae0b 0% 0% no-repeat padding-box;
 }
 
 /**
 * @ボタン 中サイズボタン(仮)基本設計書P51等に登場
 */
-input 決定ボタン {
+.accept-button {
     width: 192px;
     height: 48px;
     font-family: GothamMedium;
     letter-spacing: 0.44px;
-    color: #FFFFFF;
-    background: #F5AE0B 0% 0% no-repeat padding-box;
+    color: #ffffff;
+    background: #f5ae0b 0% 0% no-repeat padding-box;
 }
 
 /**
 * @ボタン キャンセルボタン(仮)基本設計書P51等に登場
 */
-input キャンセリングボタン {
+a.cancel-button {
     width: 128px;
     height: 48px;
     font-family: GothamMedium;
     letter-spacing: 0.44px;
     color: #707070;
-    background: #EFEFEF 0% 0% no-repeat padding-box;
+    background: #efefef 0% 0% no-repeat padding-box;
 }
 
 /**
@@ -76,6 +75,6 @@ input 幅自由に伸びるボタン {
     font-family: Noto Sans;
     font-weight: 600;
     letter-spacing: 0.25px;
-    color: #FFFFFF;
-    background: #F5AE0B 0% 0% no-repeat padding-box;
+    color: #ffffff;
+    background: #f5ae0b 0% 0% no-repeat padding-box;
 }
