[update]座席予約画面のCSS,JSの修正
チェック選択時に周りの席番号まで色が変わってしまうのを修正。

--- a/html/mycakeapp/webroot/css/bookings.css
+++ b/html/mycakeapp/webroot/css/bookings.css
@@ -135,7 +135,7 @@ label:hover {
     vertical-align: middle;
     line-height: 20px;
 } */
-.movie-seats th.locked {
+.locked {
     opacity: 0.75;
     color: #aaa;
 }
@@ -158,4 +158,9 @@ input[type="checkbox"] + label {
 
 label:hover {
     background: #00000015;
+}
+
+.table-text {
+    font-size: 13px;
+    color: #99918c;
 }
