--- a/html/mycakeapp/webroot/css/moviesinfo.css
+++ b/html/mycakeapp/webroot/css/moviesinfo.css
@@ -77,8 +77,9 @@
 }
 
 .movie-list-main{
+    width: 90%;    
     display: flex;
-    justify-content: space-around;
+    margin-left: 20px;
     align-items: center;
     background-color: #D5D5D5;
 }
@@ -92,6 +93,7 @@
 .movie-schedule-for-the-day{
     background-color: #ffffff;
     padding: 20px 20px 10px;
+    margin-left: 20px;
 }
 
 .movie-time{
