--- a/html/mycakeapp/webroot/css/moviesinfo.css
+++ b/html/mycakeapp/webroot/css/moviesinfo.css
@@ -9,10 +9,15 @@
     margin-bottom: 20px;
 }
 
+.movie-info-menu{
+    width: 1008px;
+    margin: 0 auto;
+}
+
 .movie-info-menu ul{
     display: flex;
     margin: 0 auto;
-    width: 100%;
+
     margin-bottom: 30px;
 }
 
@@ -51,6 +56,16 @@
 .movie-list{
     background-color:#D5D5D5;
     padding-bottom: 10px;
+    margin-bottom: 10px;
+}
+
+.not-movie-list{
+    background-color:#D5D5D5;
+    padding: 30px;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
     margin-bottom: 10px;
 }
 
@@ -94,6 +109,15 @@
     background-color: #ffffff;
     padding: 20px 20px 10px;
     margin-left: 20px;
+}
+
+.not-movie-schedule-for-the-day{
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+    margin-left: 20px;
+    width: 100%;
 }
 
 .movie-time{
