--- a/html/mycakeapp/webroot/css/moviesinfo.css
+++ b/html/mycakeapp/webroot/css/moviesinfo.css
@@ -128,13 +128,10 @@
     background-color: #D5D5D5;
 }
 
-.buy-button button{
-    padding: 10px 20px;
+.buy-button a{
+    padding: 10px 0px;
     width: 100%;
-    background: none;
-	border: none;
-	outline: none;
-	-webkit-appearance: none;
-	-moz-appearance: none;
-	appearance: none;
+    display: block;
+    text-align: center;
+    color: #111111;
 }
