update_予約購入部分
時間が過ぎたら受付終了にしました。

--- a/html/mycakeapp/webroot/css/moviesinfo.css
+++ b/html/mycakeapp/webroot/css/moviesinfo.css
@@ -141,3 +141,13 @@
     text-align: center;
     color: #111111;
 }
+
+.invalid-buy-button{
+    padding: 10px 0px;
+    width: 100%;
+    display: block;
+    text-align: center;
+    color: #ffffff;
+    background-color: #111111;
+    opacity: 0.3;
+}
