updata_初期デザイン
ctpとcssを変更

--- a/html/mycakeapp/webroot/css/moviesinfo.css
+++ b/html/mycakeapp/webroot/css/moviesinfo.css
@@ -153,4 +153,10 @@
 }
 
 /* ================ pricelist ここから ================ */
-
+.list-wrap table{
+    width: 400px;
+}
+.list-wrap .list-flex{
+    display: flex;
+    justify-content: space-between;
+}
