--- a/html/mycakeapp/webroot/css/moviesinfo.css
+++ b/html/mycakeapp/webroot/css/moviesinfo.css
@@ -1,7 +1,13 @@
 .movie-info-wrap{
     width: 65%;
-    margin: 0 auto;
-    margin-top: 50px;
+    margin:100px auto 0;
+}
+/* messageはエラー文 */
+.message{
+    color: tomato;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: bold;
+    padding-left: 60px;
 }
 
 .scheduel-text{
@@ -12,7 +18,7 @@
 .movie-info-menu{
     width: 1008px;
     margin: 0 auto  200px;
-    padding-top: 70px;
+    padding-top: 25px;
     z-index: 10;
 }
 
