--- a/html/mycakeapp/webroot/css/moviesinfo.css
+++ b/html/mycakeapp/webroot/css/moviesinfo.css
@@ -155,9 +155,9 @@
     width: 100%;
     display: block;
     text-align: center;
-    color: #ffffff;
-    background-color: #111111;
-    opacity: 0.3;
+    color: #000000;
+    background-color: #f1ff34;
+    border: solid 1px #000000;
 }
 
 /* ================ pricelist ここから ================ */
