--- a/html/mycakeapp/webroot/css/credit.css
+++ b/html/mycakeapp/webroot/css/credit.css
@@ -1,3 +1,34 @@
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+header{
+    position: fixed;
+}
+.modal{
+    display: none;
+    height: 56vh;
+    position: fixed;
+    top: 74px;
+    width: 100%;
+}
+.modal__bg{
+    background: rgba(0,0,0,0.8);
+    height: 100vh;
+    position: absolute;
+    width: 100%;
+}
+.modal__content{
+    background: #fff;
+    left: 50%;
+    padding: 40px;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    width: 60%;
+}
+
 .main-contents {
     width: 736px;
     margin: 0 auto;
@@ -95,6 +126,29 @@ input {
     letter-spacing: 0.44px;
     color: #FFFFFF;
     background: #F5AE0B 0% 0% no-repeat padding-box;
+}
+
+ .link-button__small, .link-button__middle {
+ display: inline-block;
+ text-align: center;
+ padding: 16px 0; } .link-button__small {
+ width: 128px;
+ font-family: GothamMedium;
+ letter-spacing: 0.44px;
+ border-style: none;
+ color: #707070;
+ background: #EFEFEF 0% 0% no-repeat padding-box; } .link-button__middle {
+ width: 192px;
+ font-family: GothamMedium;
+ letter-spacing: 0.44px;
+ color: #FFFFFF;
+ background: #F5AE0B 0% 0% no-repeat padding-box; }
+/** ボタン終わり*/
+
+.button-container {
+    width: 336px;
+    margin: 0 auto;
+    padding: 0 0 80px 0;
 }
 
 .text-registration-completed {
