--- a/html/mycakeapp/webroot/css/credit.css
+++ b/html/mycakeapp/webroot/css/credit.css
@@ -3,9 +3,7 @@
     margin: 0;
     padding: 0;
 }
-header{
-    position: fixed;
-}
+
 .modal{
     display: none;
     height: 56vh;
@@ -22,13 +20,23 @@ header{
 .modal__content{
     background: #fff;
     left: 50%;
-    padding: 40px;
+    padding: 120px 200px 68px 200px;
     position: absolute;
     top: 50%;
     transform: translate(-50%,-50%);
-    width: 60%;
+    width: 736px;
 }
-
+.modal__text {
+    text-align: center;
+    padding-bottom: 60px;
+    font: normal normal normal 16px/22px Noto Sans;
+    letter-spacing: 0.44px;
+    color: #707070;
+    opacity: 1;
+}
+.js-modal-close {
+    margin-right: 16px;
+}
 .main-contents {
     width: 736px;
     margin: 0 auto;
@@ -131,13 +139,21 @@ input {
  .link-button__small, .link-button__middle {
  display: inline-block;
  text-align: center;
- padding: 16px 0; } .link-button__small {
+ padding: 16px 0;
+ box-shadow: 0px 2px 2px #00000014;
+ line-height: 22px;
+ border: none;
+}
+
+.link-button__small {
  width: 128px;
  font-family: GothamMedium;
  letter-spacing: 0.44px;
  border-style: none;
  color: #707070;
- background: #EFEFEF 0% 0% no-repeat padding-box; } .link-button__middle {
+ background: #EFEFEF 0% 0% no-repeat padding-box;
+}
+.link-button__middle {
  width: 192px;
  font-family: GothamMedium;
  letter-spacing: 0.44px;
