[update]ログインログアウトボタンを枠までクリック領域を拡大

--- a/html/mycakeapp/webroot/css/header.css
+++ b/html/mycakeapp/webroot/css/header.css
@@ -7,12 +7,14 @@ header {
     width: 100%;
     min-width: 1080px;
     color: #ffffff;
-    background-color:#262626;
+    background-color: #262626;
     letter-spacing: 1px;
     padding: 25px 0;
 }
 
-.header-container,.header-nav-list,.header-wrap-first{
+.header-container,
+.header-nav-list,
+.header-wrap-first {
     display: flex;
     align-items: center;
 }
@@ -22,15 +24,15 @@ header {
     margin: 0 auto;
 }
 
-#header-text-quel{
-    color: #FFB100;
+#header-text-quel {
+    color: #ffb100;
     padding-right: 3px;
 }
 .header-title {
     font-size: 16px;
     font-weight: bold;
 }
-.header-nav-list{
+.header-nav-list {
     margin-left: 140px;
 }
 .header-nav-list li {
@@ -39,8 +41,11 @@ header {
     list-style: none;
 }
 
-.login-btn{
-    border: solid 1px #FFFFFF;
+.auth-toggle-btn a {
+    display: block;
+    width: 100%;
+    border: solid 1px #ffffff;
     border-radius: 3px;
-    padding: 3px 12px;
+    padding: 3px 8px;
+    text-align: center;
 }
