--- a/html/mycakeapp/webroot/css/credit.css
+++ b/html/mycakeapp/webroot/css/credit.css
@@ -101,6 +101,17 @@ input::placeholder {
     letter-spacing: 0.18px;
     color: #707070;
 }
+.info-container {
+    padding: 40px 0 20px;
+}
+.form-container label {
+    text-align: center;
+    border: 1px solid  #707070;
+    padding: 20px 0;
+}
+.info-container input[type="radio"] {
+    margin-right: 10px;
+}
 /**
 * 全ボタン共通
 */
@@ -165,6 +176,8 @@ input {
     width: 336px;
     margin: 0 auto;
     padding: 0 0 80px 0;
+    display: flex;
+    justify-content: space-between;
 }
 
 .text-registration-completed {
