--- a/html/mycakeapp/webroot/css/credit.css
+++ b/html/mycakeapp/webroot/css/credit.css
@@ -188,3 +188,15 @@ input {
     color: #707070;
     opacity: 1;
 }
+
+.visa, .master {
+    width: 32px;
+    height: 24.14px;
+}
+.flex {
+    display: flex;
+}
+.flex .text {
+    margin-right: auto;
+    width: 100%;
+}
