--- a/html/mycakeapp/webroot/css/credit.css
+++ b/html/mycakeapp/webroot/css/credit.css
@@ -3,7 +3,9 @@
     margin: 0;
     padding: 0;
 }
-
+label {
+    width: auto;
+}
 .modal{
     display: none;
     height: 56vh;
@@ -106,7 +108,7 @@ input::placeholder {
 .info-container {
     padding: 40px 0 20px;
 }
-.form-container label {
+.form-container .credit-info label {
     text-align: center;
     border: 1px solid  #707070;
     padding: 20px 0;
@@ -201,4 +203,8 @@ input {
 .flex .text {
     margin-right: auto;
     width: 100%;
+}
+
+.form-container.edit-container label {
+    font-size: 11px;
 }
