--- a/html/mycakeapp/webroot/css/credit.css
+++ b/html/mycakeapp/webroot/css/credit.css
@@ -110,6 +110,9 @@ input::placeholder {
     margin: 0 auto;
     padding: 40px 0 20px;
 }
+.info-container .error {
+    color: red;
+}
 .info-container label {
     text-align: center;
     border: 1px solid  #707070;
