--- a/html/mycakeapp/webroot/css/credit.css
+++ b/html/mycakeapp/webroot/css/credit.css
@@ -13,6 +13,12 @@ label {
     top: 74px;
     width: 100%;
 }
+body.fixed {
+    position: fixed;
+	width: 100%;
+	height: 100%;
+	left: 0;
+}
 .modal__bg{
     background: rgba(0,0,0,0.8);
     height: 100vh;
