--- a/html/mycakeapp/webroot/css/moviesinfo.css
+++ b/html/mycakeapp/webroot/css/moviesinfo.css
@@ -1,36 +1,36 @@
-.movie-info-wrap{
+.movie-info-wrap {
     width: 65%;
-    margin:100px auto 0;
+    margin: 100px auto 0;
 }
 /* messageはエラー文 */
-.message{
+.message {
     color: tomato;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
     font-weight: bold;
     padding-left: 60px;
 }
 
-.scheduel-text{
+.scheduel-text {
     font-weight: bold;
     margin-bottom: 20px;
 }
 
-.movie-info-menu{
+.movie-info-menu {
     width: 1008px;
-    margin: 0 auto  200px;
+    margin: 0 auto 200px;
     padding-top: 25px;
     z-index: 10;
 }
 
-.movie-info-menu ul{
+.movie-info-menu ul {
     display: flex;
     margin: 0 auto;
 
     margin-bottom: 30px;
 }
 
-.movie-info-menu li{
-    color: #FFFFFF;
+.movie-info-menu li {
+    color: #ffffff;
     text-align: center;
     width: 144px;
     height: 78px;
@@ -38,94 +38,95 @@
     position: relative;
 }
 
-.movie-info-menu span{
+.movie-info-menu span {
     position: absolute;
     top: 6px;
     right: 0;
     height: 78px;
-    border-right: solid 1px #EBEBEB;
+    border-right: solid 1px #ebebeb;
 }
 
-.info-menu{
-    background-color: #7B7B7B;
+.info-menu {
+    background-color: #7b7b7b;
 }
 
-.info-menu-sub{
+.info-menu-sub {
     margin-top: 10px;
     font-size: 10px;
 }
 
-.info-menu-active{
-    background-color: #EFA600;
+.info-menu-active {
+    background-color: #efa600;
 }
 
 /* =============== 以下、映画別予約購入部分 =============== */
 
-#scheduled-date{
+#scheduled-date {
     font-size: 20px;
     font-weight: bold;
     margin-bottom: 20px;
 }
 
-.movie-list{
-    background-color:#D5D5D5;
+.movie-list {
+    background-color: #d5d5d5;
     padding-bottom: 10px;
     margin-bottom: 10px;
 }
 
-.not-movie-list{
-    background-color:#D5D5D5;
+.not-movie-list {
+    background-color: #d5d5d5;
     padding: 30px;
-    color: #FFFFFF;
+    color: #ffffff;
     text-align: center;
     font-size: 18px;
     font-weight: bold;
     margin-bottom: 10px;
 }
 
-.movie-list-head{
+.movie-list-head {
     display: flex;
     align-items: baseline;
-    color: #EBEBEB;
-    background-color: #7B7B7B;
+    color: #ebebeb;
+    background-color: #7b7b7b;
     padding: 14px 0;
     margin-bottom: 15px;
 }
 
-.movie-title{
+.movie-title {
     margin-left: 16px;
 }
 
-.movie-title,.movie-screening-time{
+.movie-title,
+.movie-screening-time {
     margin-right: 16px;
 }
 
-.movie-scheduled-to-end{
+.movie-scheduled-to-end {
     font-size: 14px;
-    color: #D1D1D1;
+    color: #d1d1d1;
 }
 
-.movie-list-main{
-    width: 90%;    
+.movie-list-main {
+    width: 90%;
     display: flex;
     margin-left: 20px;
     align-items: center;
-    background-color: #D5D5D5;
+    background-color: #d5d5d5;
 }
 
-.movie-img img{
-    height:100px;
+.movie-img img {
+    height: 100px;
     width: 90px;
 }
 
-.movie-schedule-for-the-day{
+.movie-schedule-for-the-day {
     background-color: #ffffff;
     padding: 20px 20px 10px;
     margin-left: 20px;
 }
 
-.not-movie-schedule-for-the-day{
-    color: #FFFFFF;
+.not-movie-schedule-for-the-day {
+    color: #ffffff;
     text-align: center;
     font-size: 18px;
     font-weight: bold;
@@ -134,15 +135,15 @@
     padding: 38px 0;
 }
 
-.movie-time{
+.movie-time {
     margin-bottom: 20px;
 }
 
-.buy-button{
-    background-color: #D5D5D5;
+.buy-button {
+    background-color: #d5d5d5;
 }
 
-.buy-button a{
+.buy-button a {
     padding: 10px 0px;
     width: 100%;
     display: block;
@@ -150,7 +151,7 @@
     color: #111111;
 }
 
-.invalid-buy-button{
+.invalid-buy-button {
     padding: 10px 0px;
     width: 100%;
     display: block;
@@ -164,49 +165,66 @@
 
 /* ========== ヘッダー、フッターはmovie_infoのみ[position: fixed]している ==========
 他のページもおかしくなるようであれば消す。 */
-header{
+header {
     position: fixed;
     top: 0px;
     left: 0px;
     z-index: 100;
 }
 
-footer{
-    position: fixed;
+footer {
     bottom: 0px;
     right: 0px;
     z-index: 100;
 }
 /* ========== ヘッダー、フッター ========== */
-.list-wrap{
+.list-wrap {
     padding-top: 130px;
     margin-left: 400px;
     margin-bottom: 200px;
 }
 
-.list-wrap table{
+.list-wrap table {
     width: 450px;
 }
-.list-wrap .list-flex{
+.list-wrap .list-flex {
     display: flex;
     justify-content: space-between;
     margin-bottom: 15px;
     padding-bottom: 5px;
-    border-bottom: dotted 2px #ADADAD;
+    border-bottom: dotted 2px #adadad;
 }
 
-.list-wrap .list-flex td{
+.list-wrap .list-flex td {
     font-weight: bold;
 }
 
-.list-wrap .title{
+.list-wrap .title {
     font-size: 20px;
     font-weight: bold;
-    border-left: solid 8px #ADADAD;
-    padding:8px 10px;
+    border-left: solid 8px #adadad;
+    padding: 8px 10px;
     margin-bottom: 30px;
 }
 
-.list-wrap .price-list{
+.list-wrap .price-list {
     margin-bottom: 100px;
+}
+
+/* 予約詳細ページ */
+.wrapper {
+    background: #ffffff;
+    width: 736px;
+    margin: 0 auto 60px;
+    text-align: center;
+    padding-top: 50px;
+}
+
+.heading {
+    text-align: center;
+    color: #707070;
+    font-size: 25px;
+    letter-spacing: 0.89px;
+    line-height: 34px;
+    margin: 154px 0 39px 0;
 }
