--- a/html/mycakeapp/webroot/css/toppage.css
+++ b/html/mycakeapp/webroot/css/toppage.css
@@ -29,9 +29,7 @@
 /* slideセクション */
 .slide-inner {
     padding-top: 88px;
-}
-.slide-inner img {
-    width: 100%;
+    padding-bottom: 144px;
 }
 
 /* movielistセクション */
@@ -73,4 +71,93 @@
 }
 .banner-box img {
     width: 532px;
+}
+
+/* スライド用css 参考URL: https://csshtml.work/css-only-select-auto-slide/ */
+
+.out{
+    position: relative;
+}
+.slide-inner img {
+    width: 1088px;
+    height: 384px;
+    object-fit: cover;
+}
+.in img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: 2s;
+    z-index: 0;
+}
+img{
+    display: block;
+}
+input{
+    display: none;
+}
+.in{
+    display: flex;
+    justify-content: center;
+}
+label span{
+    display: block;
+    width: 20px;
+    height: 20px;
+    padding: 7px;
+    margin: -40px 0 0;
+    border-radius: 100%;
+    cursor: pointer;
+    position: relative;
+    z-index: 2;
+}
+label span::before{
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    background: #4287f5;
+    opacity: 0.5;
+    border-radius: 100%;
+}            
+input:nth-of-type(1):checked ~ .in label:nth-of-type(1) span::before,
+input:nth-of-type(2):checked ~ .in label:nth-of-type(2) span::before,
+input:nth-of-type(3):checked ~ .in label:nth-of-type(3) span::before{
+    background: #FFF;
+    opacity: 1;
+}
+label span::before{
+    animation: slidebutton 6.9s infinite;
+}
+@keyframes slidebutton{
+    0%{opacity: 0.5;background: #4287f5;}
+    13%{opacity: 1;background: #FFF;}/* b÷x×100=y */
+    33.3%{opacity: 1;background: #FFF;}/* 100÷c=z */
+    46.3%{opacity: 0.5;background: #4287f5;}/* y+z */
+}            
+label:nth-of-type(2) span::before,label:nth-of-type(2) img{
+    animation-delay: 2.3s;
+}            
+label:nth-of-type(3) span::before,label:nth-of-type(3) img{
+    animation-delay: 4.6s;
+}            
+input:nth-of-type(1):checked ~ .in label:nth-of-type(1) img,
+input:nth-of-type(2):checked ~ .in label:nth-of-type(2) img,
+input:nth-of-type(3):checked ~ .in label:nth-of-type(3) img{
+    opacity: 1;
+    z-index: 1;
+}
+.in img{
+    animation: slide 6.9s infinite;/* (a+b)×c=x */
+    opacity: 0;
+}
+@keyframes slide{
+    0%{opacity: 0;}
+    13%{opacity: 1;z-index: 1;}/* b÷x×100=y */
+    33.3%{opacity: 1;}/* 100÷c=z */
+    46.3%{opacity: 0;z-index: 0;}/* y+z */
+}
+input:checked ~ .in img,input:checked ~ .in span::before{
+    animation: none;
 }
