[update]ビュー要素の雛形を作成

--- a/html/mycakeapp/webroot/css/moviesinfo.css
+++ b/html/mycakeapp/webroot/css/moviesinfo.css
@@ -228,3 +228,35 @@ footer {
     line-height: 34px;
     margin: 154px 0 39px 0;
 }
+.booking-contents {
+    text-align: center;
+}
+.booking-detail {
+    display: flex;
+    width: 528px;
+    height: 128px;
+    background: #f2f2f2 0% 0% no-repeat padding-box;
+    margin: 0 auto 8px auto;
+}
+
+.thumbnail {
+    width: 96px;
+    height: 128px;
+}
+
+.detail {
+    color: #707070;
+}
+
+.title {
+    font: normal normal normal 20px/27px Noto Sans;
+    padding-bottom: 4px;
+}
+
+.datetime-screening-seat {
+    font: normal normal normal 16px/22px Noto Sans;
+}
+
+.price {
+    font: normal normal 600 18px/24px Noto Sans;
+}
