[update]クラス名の修正

--- a/html/mycakeapp/webroot/css/moviesinfo.css
+++ b/html/mycakeapp/webroot/css/moviesinfo.css
@@ -217,7 +217,7 @@ footer {
     width: 736px;
     margin: 0 auto 60px;
     text-align: center;
-    padding-top: 50px;
+    padding: 50px 0 20px 0;
 }
 
 .heading {
@@ -228,6 +228,15 @@ footer {
     line-height: 34px;
     margin: 154px 0 39px 0;
 }
+
+.booking-type {
+    margin-bottom: 18px;
+    text-align: center;
+    font: normal normal 16px/20px Noto Sans;
+    letter-spacing: 0.89px;
+    color: #707070;
+}
+
 .booking-contents {
     text-align: center;
 }
@@ -242,6 +251,12 @@ footer {
 .thumbnail {
     width: 96px;
     height: 128px;
+}
+
+.detail-contents {
+    width: 250px;
+    text-align: left;
+    padding: 19px 0 24px 24px;
 }
 
 .detail {
@@ -259,4 +274,43 @@ footer {
 
 .price {
     font: normal normal 600 18px/24px Noto Sans;
+    display: inline;
+    padding-right: 15px;
+}
+
+.discount {
+    display: inline;
+    width: 144px;
+    height: 24px;
+    border: 2px solid #afafaf;
+    color: #b7b7b7;
+}
+
+.cancel-button {
+    display: block;
+    margin: auto;
+    padding-top: 32px;
+    width: 96px;
+    height: 32px;
+}
+
+.cancel-send {
+    width: 96px;
+    color: #afafaf;
+}
+
+.payment-button-wrapper {
+    display: block;
+}
+
+.payment-button {
+    margin: auto 28px;
+    width: 96px;
+    height: 21px;
+    border: 2px solid #afafaf;
+}
+
+.payment-send {
+    color: #afafaf;
+    font-size: 12px;
 }
