--- a/html/mycakeapp/webroot/css/credit.css
+++ b/html/mycakeapp/webroot/css/credit.css
@@ -191,7 +191,7 @@ input {
 .button-container {
     width: 336px;
     margin: 0 auto;
-    padding: 0 0 80px 0;
+    padding: 70px 0 60px 0;
     display: flex;
     justify-content: space-between;
 }
