updata_リンク追加
決定とキャンセルボタンのリンクを仮で追加

--- a/html/mycakeapp/webroot/css/bookings.css
+++ b/html/mycakeapp/webroot/css/bookings.css
@@ -170,10 +170,11 @@ label:hover {
 }
 
 .credit-choice{    
-    height: 88px;
+    /* height: 88px; */
     border: 0.5px solid #ADADAD;
     border-radius: 5px;
     margin-bottom: 30px;
+    padding: 20px 0;
 }
 
 .credit-choice-flex{
