--- a/html/mycakeapp/webroot/css/bookings.css
+++ b/html/mycakeapp/webroot/css/bookings.css
@@ -187,3 +187,31 @@ label:hover {
 .select-btn{
 text-align: center;
 }
+
+.price-box{
+    padding-bottom: 40px;
+    font-size: 15px;
+    width: 325px;
+    margin: 0 auto;
+}
+
+.price-flex{
+    display: flex;
+    justify-content: space-between;
+}
+
+.overview-wrapper{
+    background: #ffffff;
+    width: 736px;
+    padding: 45px 0;
+    margin: 0 auto 60px; 
+}
+
+.ticket-price{
+    padding-bottom: 30px;
+    border-bottom: solid 2px #99918c;
+}
+
+.total-price{
+    padding-top: 20px;
+}
