--- a/html/mycakeapp/webroot/css/moviesinfo.css
+++ b/html/mycakeapp/webroot/css/moviesinfo.css
@@ -426,15 +426,6 @@ input {
     justify-content: space-between;
 }
 
-.text-registration-completed {
-    padding: 120px 0 40px 0;
-    text-align: center;
-    font-size: 16px;
-    letter-spacing: 0.44px;
-    color: #707070;
-    opacity: 1;
-}
-
 .cancel-button {
     margin: auto 14px;
     height: auto;
@@ -456,5 +447,49 @@ input {
     letter-spacing: 0.44px;
     background: #f5ae0b 0% 0% no-repeat padding-box;
     box-shadow: 0px 3px 6px #00000036;
+    opacity: 1;
+}
+
+.link-button__small-modal,
+.link-button__middle-modal {
+    display: inline-block;
+    text-align: center;
+    padding: 16px 0;
+    box-shadow: 0px 2px 2px #00000014;
+    line-height: 22px;
+    border: none;
+}
+
+.link-button__small-modal {
+    width: 128px;
+    font-family: GothamMedium;
+    letter-spacing: 0.44px;
+    border-style: none;
+    color: #707070;
+    background: #efefef 0% 0% no-repeat padding-box;
+}
+.link-button__middle-modal {
+    width: 192px;
+    margin-right: 16px;
+    font-family: GothamMedium;
+    letter-spacing: 0.44px;
+    color: #ffffff;
+    background: #f5ae0b 0% 0% no-repeat padding-box;
+}
+
+/* 削除完了ページ */
+
+.form-container {
+    background-color: #ffffff;
+    width: 736px;
+    height: 312px;
+    margin: 216px auto 160px;
+}
+.text-registration-completed {
+    padding: 120px 0 40px 0;
+    text-align: center;
+    font-size: 16px;
+    letter-spacing: 0.44px;
+    color: #707070;
     opacity: 1;
 }
