--- a/html/mycakeapp/webroot/css/moviesinfo.css
+++ b/html/mycakeapp/webroot/css/moviesinfo.css
@@ -7,6 +7,7 @@
     color: tomato;
     font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
     font-weight: bold;
+    padding-left: 60px;
 }
 
 .scheduel-text {
@@ -172,7 +173,6 @@ header {
 }
 
 footer {
-    position: fixed;
     bottom: 0px;
     right: 0px;
     z-index: 100;
