--- a/html/mycakeapp/webroot/css/toppage.css
+++ b/html/mycakeapp/webroot/css/toppage.css
@@ -1,12 +1,11 @@
 /* toppage共通 */
-*{
+* {
     box-sizing: border-box;
 }
 .main-contents {
     width: 1088px;
     margin: 0 auto;
 }
-
 
 .heading-box {
     display: flex;
@@ -17,7 +16,7 @@
     width: 8px;
     height: 32px;
     margin-right: 8px;
-    background: #FFB100 0% 0% no-repeat padding-box;
+    background: #ffb100 0% 0% no-repeat padding-box;
 }
 .h1 {
     font: normal normal bold 16px/22px Noto Sans;
@@ -29,7 +28,7 @@
 /* slideセクション */
 .slide-inner {
     padding-top: 88px;
-    padding-bottom: 144px;
+    padding-bottom: 94px;
 }
 
 /* movielistセクション */
@@ -41,7 +40,8 @@
 .movielist-box img {
     width: 350px;
 }
-.movielist-link, .discount-link {
+.movielist-link,
+.discount-link {
     display: block;
     width: 336px;
     padding: 16px 0;
@@ -75,7 +75,7 @@
 
 /* スライド用css 参考URL: https://csshtml.work/css-only-select-auto-slide/ */
 
-.out{
+.out {
     position: relative;
 }
 .slide-inner img {
@@ -83,7 +83,7 @@
     height: 384px;
     object-fit: cover;
 }
-.in img{
+.in img {
     position: absolute;
     top: 0;
     left: 0;
@@ -91,17 +91,17 @@
     transition: 2s;
     z-index: 0;
 }
-img{
+img {
     display: block;
 }
-input{
+input {
     display: none;
 }
-.in{
+.in {
     display: flex;
     justify-content: center;
 }
-label span{
+label span {
     display: block;
     width: 20px;
     height: 20px;
@@ -112,7 +112,7 @@ label span{
     position: relative;
     z-index: 2;
 }
-label span::before{
+label span::before {
     content: "";
     display: block;
     width: 100%;
@@ -120,44 +120,69 @@ label span::before{
     background: #4287f5;
     opacity: 0.5;
     border-radius: 100%;
-}            
+}
 input:nth-of-type(1):checked ~ .in label:nth-of-type(1) span::before,
 input:nth-of-type(2):checked ~ .in label:nth-of-type(2) span::before,
-input:nth-of-type(3):checked ~ .in label:nth-of-type(3) span::before{
-    background: #FFF;
+input:nth-of-type(3):checked ~ .in label:nth-of-type(3) span::before {
+    background: #fff;
     opacity: 1;
 }
-label span::before{
+label span::before {
     animation: slidebutton 6.9s infinite;
 }
-@keyframes slidebutton{
-    0%{opacity: 0.5;background: #4287f5;}
-    13%{opacity: 1;background: #FFF;}/* b÷x×100=y */
-    33.3%{opacity: 1;background: #FFF;}/* 100÷c=z */
-    46.3%{opacity: 0.5;background: #4287f5;}/* y+z */
-}            
-label:nth-of-type(2) span::before,label:nth-of-type(2) img{
+@keyframes slidebutton {
+    0% {
+        opacity: 0.5;
+        background: #4287f5;
+    }
+    13% {
+        opacity: 1;
+        background: #fff;
+    } /* b÷x×100=y */
+    33.3% {
+        opacity: 1;
+        background: #fff;
+    } /* 100÷c=z */
+    46.3% {
+        opacity: 0.5;
+        background: #4287f5;
+    } /* y+z */
+}
+label:nth-of-type(2) span::before,
+label:nth-of-type(2) img {
     animation-delay: 2.3s;
-}            
-label:nth-of-type(3) span::before,label:nth-of-type(3) img{
+}
+label:nth-of-type(3) span::before,
+label:nth-of-type(3) img {
     animation-delay: 4.6s;
-}            
+}
 input:nth-of-type(1):checked ~ .in label:nth-of-type(1) img,
 input:nth-of-type(2):checked ~ .in label:nth-of-type(2) img,
-input:nth-of-type(3):checked ~ .in label:nth-of-type(3) img{
+input:nth-of-type(3):checked ~ .in label:nth-of-type(3) img {
     opacity: 1;
     z-index: 1;
 }
-.in img{
-    animation: slide 6.9s infinite;/* (a+b)×c=x */
+.in img {
+    animation: slide 6.9s infinite; /* (a+b)×c=x */
     opacity: 0;
 }
-@keyframes slide{
-    0%{opacity: 0;}
-    13%{opacity: 1;z-index: 1;}/* b÷x×100=y */
-    33.3%{opacity: 1;}/* 100÷c=z */
-    46.3%{opacity: 0;z-index: 0;}/* y+z */
+@keyframes slide {
+    0% {
+        opacity: 0;
+    }
+    13% {
+        opacity: 1;
+        z-index: 1;
+    } /* b÷x×100=y */
+    33.3% {
+        opacity: 1;
+    } /* 100÷c=z */
+    46.3% {
+        opacity: 0;
+        z-index: 0;
+    } /* y+z */
 }
-input:checked ~ .in img,input:checked ~ .in span::before{
+input:checked ~ .in img,
+input:checked ~ .in span::before {
     animation: none;
 }
