--- a/html/mycakeapp/webroot/css/moviesinfo.css
+++ b/html/mycakeapp/webroot/css/moviesinfo.css
@@ -16,7 +16,7 @@
 
 .movie-info-menu {
     width: 1008px;
-    margin: 0 auto 200px;
+    margin: 0 auto 81px;
     padding-top: 25px;
     z-index: 10;
 }
@@ -238,7 +238,7 @@ footer {
     display: flex;
     width: 380px;
     height: 36px;
-    margin: 0 auto 28px;
+    margin: 0 0 28px 178px;
     justify-content: space-between;
 }
 
@@ -250,12 +250,6 @@ footer {
     display: inline;
     margin-right: 110px;
     padding-top: 12px;
-}
-
-.mypage-button-wrapper {
-    height: 32px;
-    background: #f5ae0b 0% 0% no-repeat padding-box;
-    box-shadow: 0px 2px 2px #00000014;
 }
 
 .mypage-button {
