--- a/html/mycakeapp/webroot/css/moviesinfo.css
+++ b/html/mycakeapp/webroot/css/moviesinfo.css
@@ -470,7 +470,8 @@ input {
 .link-button__middle {
     display: inline-block;
     text-align: center;
-    padding-top: 4px;
+    padding-top: 16px;
+    padding-bottom: 16px;
     box-shadow: 0px 2px 2px #00000014;
     line-height: 22px;
     border: none;
@@ -478,7 +479,6 @@ input {
 
 .link-button__small {
     width: 96px;
-    height: 32px;
     border: 1.5px solid var(--unnamed-color-afafaf);
     color: #707070;
     background: #efefef 0% 0% no-repeat padding-box;
@@ -568,4 +568,12 @@ input {
     color: #707070;
     opacity: 1;
 
+}
+
+/* ユーザー退会関連CSS */
+.user-delete__button {
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    color: #707070;
 }
