--- a/html/mycakeapp/webroot/css/moviesinfo.css
+++ b/html/mycakeapp/webroot/css/moviesinfo.css
@@ -264,6 +264,7 @@ footer {
 
 .mypage-button {
     display: block;
+    box-sizing: content-box;
     height: 24px;
     background: #f5ae0b 0% 0% no-repeat padding-box;
     box-shadow: 0px 2px 2px #00000014;
