--- a/html/mycakeapp/webroot/css/footer.css
+++ b/html/mycakeapp/webroot/css/footer.css
@@ -5,6 +5,9 @@ footer {
     color: #ffffff;
     background-color: #262626;
     align-content: center;
+    bottom: 0px;
+    right: 0px;
+    z-index: 100;
 }
 .footer-container {
     display: flex;
