--- a/html/mycakeapp/webroot/css/bookings.css
+++ b/html/mycakeapp/webroot/css/bookings.css
@@ -4,7 +4,7 @@
 }
 
 .submit {
-    margin-top: 50px;
+    margin-top: 20px;
     padding-bottom: 80px;
 }
 
@@ -33,6 +33,7 @@
     width: 496px;
     height: 348px;
     text-align: center;
+    margin-bottom: 20px;
 }
 
 tr {
