--- a/html/mycakeapp/webroot/css/toppage.css
+++ b/html/mycakeapp/webroot/css/toppage.css
@@ -36,6 +36,7 @@
 }
 .movielist-box img {
     width: 350px;
+    height: 208px;
 }
 .movielist-link,
 .discount-link {
@@ -67,7 +68,7 @@
     margin-bottom: 32px;
 }
 .banner-box img {
-    width: 532px;
+    width: 536px;
 }
 
 /* スライド用css 参考URL: https://csshtml.work/css-only-select-auto-slide/ */
